--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -28,9 +28,9 @@
 		</div>
 		<div class="col-sm-9">
 			<h4>{{ user }}</h4>
-			<span class="label label-info">{% if user.type_profile %}{{ user.type_profile }}{% else %}
+			<span class="label label-info">{% if user.type_profile %}{{ user.get_type_profile_display }}{% else %}
 			{% trans 'Administrator' %} {% endif %}</span>
-			<span class="label label-primary">{{ user.gender }}</span>
+			<span class="label label-primary">{{ user.get_gender_display }}</span>
 			<span class="label label-warning">{{ user.city }} / {{ user.state }}</span>
 			<p>
 				<strong>{% trans 'Mail:' %} </strong> {{ user.email }}
