--- a/users/templates/users/view.html
+++ b/users/templates/users/view.html
@@ -14,8 +14,14 @@
 	  	<a href="{% url 'app:users:manage' %}" class="list-group-item">
 	    	{% trans 'System Users' %}
 	  	</a>
-	  	<a href="{% url 'app:users:create' %}" class="list-group-item active">
+	  	<a href="{% url 'app:users:create' %}" class="list-group-item">
 	    	{% trans 'New Account' %}
+	  	</a>
+	  	<a href="{% url 'app:users:view' acc.username %}" class="list-group-item active">
+	    	{% trans 'View User Account' %}
+	  	</a>
+	  	<a href="{% url 'app:users:update' acc.username %}" class="list-group-item">
+	    	{% trans 'Edit User Account' %}
 	  	</a>
 	  	<a href="{% url 'app:send_mail' %}" class="list-group-item">
 	    	{% trans 'Send Mail' %}
