--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,11 +5,11 @@
 {% block sidebar %}
 	<h4>{% trans 'You have:' %} </h4>
 	<div class="list-group">
-	  	<a href="{% url 'app:tarefas' %}" class="list-group-item">
+	  	<a href="#" class="list-group-item">
 	  		<span class="badge">4</span>
 	    	{% trans 'Pending Tasks' %}
 	  	</a>
-	  	<a href="{% url 'app:online' %}" class="list-group-item">
+	  	<a href="#" class="list-group-item">
 	  		<span class="badge">0</span>
 	    	{% trans 'Users Online' %}
 	  	</a>
