--- a/users/templates/users/update.html
+++ b/users/templates/users/update.html
@@ -18,7 +18,7 @@
 	  	<a href="{% url 'app:users:create' %}" class="list-group-item">
 	    	{% trans 'New Account' %}
 	  	</a>
-	  	<a href="{% url 'app:send_mail' %}" class="list-group-item">
+	  	<a href="#" class="list-group-item">
 	    	{% trans 'Send Mail' %}
 	  	</a>
 	</div>
