--- a/users/templates/users/view.html
+++ b/users/templates/users/view.html
@@ -23,7 +23,7 @@
 	  	<a href="{% url 'app:users:update' acc.username %}" class="list-group-item">
 	    	{% trans 'Edit User Account' %}
 	  	</a>
-	  	<a href="{% url 'app:send_mail' %}" class="list-group-item">
+	  	<a href="#" class="list-group-item">
 	    	{% trans 'Send Mail' %}
 	  	</a>
 	</div>
