Testando views dos cursos

--- a/courses/templates/course/update.html
+++ b/courses/templates/course/update.html
@@ -18,7 +18,7 @@
 	  	<a href="{% url 'app:course:manage_mods' course.slug %}" class="list-group-item">
 	    	{% trans 'Manage Modules' %}
 	  	</a>
-	  	<a href="{% url 'app:participantes_curso' %}" class="list-group-item">
+	  	<a href="#" class="list-group-item">
 	    	{% trans 'Participants' %}
 	  	</a>
 	</div>
