--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -27,7 +27,7 @@
 		  	<a href="{% url 'app:course:update' course.slug %}" class="list-group-item">
 		    	{% trans 'Edit Course' %}
 		  	</a>
-		  	<a href="{% url 'app:subscription:participants' course.slug %}" class="list-group-item">
+		  	<a href="#" class="list-group-item">
 		    	{% trans 'Participants' %}
 		  	</a>
 			<a href="" class="list-group-item">
