--- a/core/templates/lembrar_senha.html
+++ b/core/templates/lembrar_senha.html
@@ -115,7 +115,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		<div id="pLeftMenu" class="pLeftMenu">
 			<div id="side_menu_1">
 				<ul id="menu_sessoes">
-					<li><a href="{% url 'nova_conta' %}" class="insert">Nova conta</a></li>
+					<li><a href="{% url 'create_account' %}" class="insert">Nova conta</a></li>
 			    </ul>
 			</div>
 		</div>
