--- a/core/templates/create_account.html
+++ b/core/templates/create_account.html
@@ -62,7 +62,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 				<dl id="formlogin">
 					<form name="logonForm" method="post" action="/amadeuslms/validateLogin.do">				
 			  		<dt><input type="text" name="login" maxlength="15" size="15" value="" class="inputlogin"> </dt>
-	      			<dt><input type="password" name="password" maxlength="15" size="15" value="" class="inputlogin">&nbsp;<br /><a href="{% url 'index' %}" name="logonForm" class="button">Entrar</a></dt>
+	      			<dt><input type="password" name="password" maxlength="15" size="15" value="" class="inputlogin">&nbsp;<br /><a href="{% url 'home' %}" name="logonForm" class="button">Entrar</a></dt>
 		       		</form>
 <script type="text/javascript" language="JavaScript">
   <!--
