--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -26,7 +26,7 @@
 		{% endfor %}
 		<div class="form-group">
 			<div class="col-sm-12">
-				<input type="submit" class="btn btn-sm btn-success pull-right" value="Entrar" />
+				<input type="submit" class="btn btn-sm btn-success pull-right" value="{% trans 'Entrar' %}" />
 			</div>
 		</div>
 	</form>
