--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,103 +1,55 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 {% load static i18n %}
-<!-- 
-Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
-Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
-O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
-publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
-Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
-Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
--->
+
 
 <html>
 <head>
-	<!-- 
-Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
-Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
-O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
-publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
-Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
-Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
--->
-	<title>Projeto Amadeus</title>
+	<title>{{ title }}</title>
 	
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
 	
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
-	<link href="{% static 'css/amadeus.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'bootstrap-3.3.7/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<!--CSS block for specific-app ones -->
 	{% block style %}
 	{% endblock %}
 
-	<link href="{% static 'imgs/favicon.ico' %}" rel="shortcut icon" />
+	<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
 	
-	<script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}"></script>
+	<!--Javascript block for specific-app ones -->
 	{% block javascript %}
 		
 	{% endblock %}
 </head>
 <body>
-	<nav class="navbar navbar-inverse">
-      	<div class="container">
-        	<div class="navbar-header">
-          		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            		<span class="sr-only">Toggle navigation</span>
-            		<span class="icon-bar"></span>
-        			<span class="icon-bar"></span>
-            		<span class="icon-bar"></span>
-          		</button>
-          		<a class="navbar-brand" href="{% url 'home' %}">
-          			<img alt="Brand" src="{% static 'imgs/amadeus.png' %}" /> {% trans 'Project Amadeus' %}
-          		</a>
-        	</div>
-        	<div id="navbar" class="collapse navbar-collapse pull-right">
-      			{% block menu_top %}
-          		
-        		{% endblock %}
-        	</div>
-      	</div>
-    </nav>
+	{% block nav %}
+
+	{% endblock %}
+		
     <div class="container">
     	{% block breadcrumbs %}
     	
     	{% endblock %}
     	<div class="row">
-    		<div class="col-sm-4">
+    		<div class="col-md-2 col-sm-2">
 				{% block sidebar %}
 					
 				{% endblock %}
 			</div>
-			<div class="col-sm-8">
+			<div class="col-md-6 col-sm-6">
 				{% block content %}
 					
 				{% endblock %}
 			</div>
+			<div class="col-md-4 col-sm-4">
+				{% block rightbar %}
+					
+				{% endblock rightbar %}
+			</div>
 		</div>
 	</div>
-	<!-- 
-Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
-Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
-O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
-publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
-Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
-Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
--->
-	<div class="well well-sm footer">
-		&copy; Copyright Amadeus 2016. {% trans 'All rights reserved' %}
-	</div>
-
-	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+	
 </div>
 </body>
 </html>
