--- a/courses/templates/category/view.html
+++ b/courses/templates/category/view.html
@@ -11,10 +11,10 @@
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage_cat' %}" class="list-group-item">
+	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item">
 	    	{% trans 'Categories' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create_cat' %}" class="list-group-item">
+	  	<a href="{% url 'course:create_cat' %}" class="list-group-item">
 	    	{% trans 'Create Category' %}
 	  	</a>
 	  	<a href="" class="list-group-item">
