--- a/courses/templates/course/create.html
+++ b/courses/templates/course/create.html
@@ -12,7 +12,7 @@
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage' %}" class="list-group-item">
+	  	<a href="{% url 'course:manage' %}" class="list-group-item">
 	    	{% trans 'Courses' %}
 	  	</a>
 	</div>
