--- a/core/templates/lembrar_senha.html
+++ b/core/templates/lembrar_senha.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 {% load static %}
-<!-- 
+<!--
 Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
+
 Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
+
 O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
 publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
+
 Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
+
 Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
 -->
 
@@ -21,16 +21,16 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 <html>
 <head>
-	<!-- 
+	<!--
 Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
+
 Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
+
 O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
 publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
+
 Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
+
 Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
 -->
 
@@ -38,15 +38,15 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 	<title>Projeto Amadeus</title>
-	
+
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
-	
+
 	<link href="{% static 'css/css.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'css/amadeus.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'css/content_management.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'css/jqueryui/smoothness/jquery-ui-1.7.1.custom.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'imgs/favicon.ico' %}" rel="shortcut icon" />
-	
+
 	<script type='text/javascript' src='dwr/interface/UtilDWR.js'></script>
 	<script type='text/javascript' src='dwr/engine.js'></script>
 	<script type='text/javascript' src='dwr/util.js'></script>
@@ -60,7 +60,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		<div id="pHeader" class="pHeader">
 			<div id="login">
 				<dl id="formlogin">
-					<form name="logonForm" method="post" action="/amadeuslms/validateLogin.do">				
+					<form name="logonForm" method="post" action="/amadeuslms/validateLogin.do">
 			  		<dt><input type="text" name="login" maxlength="15" size="15" value="" class="inputlogin"> </dt>
 	      			<dt><input type="password" name="password" maxlength="15" size="15" value="" class="inputlogin">&nbsp;
 						<br /><a href="{% url 'index' %}" name="logonForm" class="button">Entrar</a></dt>
@@ -78,16 +78,16 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 				</dl>
 			</div>
 		</div>
-		<!-- 
+		<!--
 Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
+
 Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
+
 O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
 publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
+
 Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
+
 Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
 -->
 
@@ -96,9 +96,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 
-	
+
 <div id="institutional_menu">
-	
+
 	<span><a href="/amadeuslms/fProject.do" target="_blank">O Projeto</a></span>
 	<span>&nbsp;|&nbsp;</span>
 	<span><a href="/amadeuslms/fCCTE.do" target="_blank">Grupo CCTE</a></span>
@@ -121,8 +121,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		</div>
 		<div id="pContent" class="pContent">
 			<dl class="insert2">
-				
-				
+
+
 				<form name="remindPasswordForm" method="post" action="/amadeuslms/remindPassword.do">
 				<dt>Endereço de e-mail</dt>
 					<dd><input type="text" name="email" value="" class="formfield2" id="username"></dd>
@@ -139,20 +139,20 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
   // -->
 </script>
 
-			</dl>		
+			</dl>
 		</div>
 		<div id="pRightMenu" class="pRightMenu">
 		</div>
-		<!-- 
+		<!--
 Copyright 2008, 2009 UFPE - Universidade Federal de Pernambuco
- 
+
 Este arquivo é parte do programa Amadeus Sistema de Gestão de Aprendizagem, ou simplesmente Amadeus LMS
- 
+
 O Amadeus LMS é um software livre; você pode redistribui-lo e/ou modifica-lo dentro dos termos da Licença Pública Geral GNU como
 publicada pela Fundação do Software Livre (FSF); na versão 2 da Licença.
- 
+
 Este programa é distribuído na esperança que possa ser útil, mas SEM NENHUMA GARANTIA; sem uma garantia implícita de ADEQUAÇÃO a qualquer MERCADO ou APLICAÇÃO EM PARTICULAR. Veja a Licença Pública Geral GNU para maiores detalhes.
- 
+
 Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título "LICENCA.txt", junto com este programa, se não, escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA.
 -->
 
