--- a/courses/templates/category/delete.html
+++ b/courses/templates/category/delete.html
@@ -11,10 +11,10 @@
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage_cat' %}" class="list-group-item active">
+	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item active">
 	    	{% trans 'Categories' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create_cat' %}" class="list-group-item">
+	  	<a href="{% url 'course:create_cat' %}" class="list-group-item">
 	    	{% trans 'Create Category' %}
 	  	</a>
 	</div>
@@ -25,6 +25,6 @@
 		{% csrf_token %}
 	    <p>{% trans 'Are you sure you want to delete the category' %} "{{ object }}"?</p>
 	    <input type="submit" class="btn btn-success btn-sm" value="{% trans 'Yes' %}" />
-	    <a href="{% url 'app:course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
+	    <a href="{% url 'course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
 	</form>
 {% endblock %}
