--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -11,10 +11,10 @@
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage_cat' %}" class="list-group-item active">
+	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item active">
 	    	{% trans 'Categories' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create_cat' %}" class="list-group-item">
+	  	<a href="{% url 'course:create_cat' %}" class="list-group-item">
 	    	{% trans 'Create Category' %}
 	  	</a>
 	</div>
@@ -47,9 +47,9 @@
 							<td>{{ category }}</td>
 							<td>{{ category.slug }}</td>
 							<td class="text-center">
-								<a href="{% url 'app:course:view_cat' category.slug %}" class="btn btn-info btn-sm"><span class="glyphicon glyphicon-eye-open"></span></a>
-								<a href="{% url 'app:course:update_cat' category.slug %}" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-edit"></span></a>
-								<a href="{% url 'app:course:delete_cat' category.slug %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a>
+								<a href="{% url 'course:view_cat' category.slug %}" class="btn btn-info btn-sm"><span class="glyphicon glyphicon-eye-open"></span></a>
+								<a href="{% url 'course:update_cat' category.slug %}" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-edit"></span></a>
+								<a href="{% url 'course:delete_cat' category.slug %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a>
 							</td>
 						</tr>
 					{% endfor %}
