--- a/courses/templates/course/delete.html
+++ b/courses/templates/course/delete.html
@@ -5,16 +5,16 @@
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
 	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-	  	<li><a href="{% url 'app:course:view' course.slug %}">{{ course }}</a></li>
+	  	<li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
 	</ol>
 {% endblock %}
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage' %}" class="list-group-item">
+	  	<a href="{% url 'course:manage' %}" class="list-group-item">
 	    	{% trans 'Courses' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create' %}" class="list-group-item">
+	  	<a href="{% url 'course:create' %}" class="list-group-item">
 	    	{% trans 'Create Course' %}
 	  	</a>
 	</div>
@@ -26,6 +26,6 @@
 		{% csrf_token %}
 	    <p>{% trans 'Are you sure you want to delete the couse' %} "{{ object }}"?</p>
 	    <input type="submit" class="btn btn-success btn-sm" value="{% trans 'Yes' %}" />
-	    <a href="{% url 'app:course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
+	    <a href="{% url 'course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
 	</form>
 {% endblock %}
