--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -11,10 +11,10 @@
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage' %}" class="list-group-item active">
+	  	<a href="{% url 'course:manage' %}" class="list-group-item active">
 	    	{% trans 'Courses' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create' %}" class="list-group-item">
+	  	<a href="{% url 'course:create' %}" class="list-group-item">
 	    	{% trans 'Create Course' %}
 	  	</a>
 	</div>
@@ -28,7 +28,7 @@
 		<ul class="categories">
 			{% for category in categories %}
 				<li>
-					<a href="{% url 'app:course:filter' category.slug %}">
+					<a href="{% url 'course:filter' category.slug %}">
 						{{ category }}
 					</a>
 				</li>
@@ -59,20 +59,20 @@
 					<div class="row">
 			  			<div class="col-md-12">
 							<div class="pull-right">
-								<a href="{% url 'app:course:view' course.slug %}" class="btn btn-sm btn-info">
+								<a href="{% url 'course:view' course.slug %}" class="btn btn-sm btn-info">
 									<span class="glyphicon glyphicon-eye-open"></span>
 								</a>
 								{% if user|has_role:'professor, system_admin' %}
-									<a href="{% url 'app:course:update' course.slug %}" class="btn btn-sm btn-primary">
+									<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
 										<span class="glyphicon glyphicon-edit"></span>
 									</a>
-									<a href="{% url 'app:course:delete' course.slug %}" class="btn btn-sm btn-danger">
+									<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
 										<span class="glyphicon glyphicon-trash"></span>
 									</a>
 								{% endif %}
 							</div>
 							<h4>
-								<a href="{% url 'app:course:view' course.slug %}">
+								<a href="{% url 'course:view' course.slug %}">
 									{{ course }}
 								</a>
 							</h4>
