--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -11,20 +11,20 @@
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage' %}" class="list-group-item">
+	  	<a href="{% url 'course:manage' %}" class="list-group-item">
 	    	{% trans 'Courses' %}
 	  	</a>
-	  	<a href="{% url 'app:course:view' course.slug %}" class="list-group-item active">
+	  	<a href="{% url 'course:view' course.slug %}" class="list-group-item active">
 	    	{% trans 'Course Info' %}
 	  	</a>
-	  	<a href="{% url 'app:course:manage_mods' course.slug %}" class="list-group-item">
+	  	<a href="{% url 'course:manage_mods' course.slug %}" class="list-group-item">
 	    	{% trans 'Manage Modules' %}
 	  	</a>
 	  	{% if user|has_role:'professor, system_admin' %}
-		  	<a href="{% url 'app:course:create' %}" class="list-group-item">
+		  	<a href="{% url 'course:create' %}" class="list-group-item">
 		    	{% trans 'Create Course' %}
 		  	</a>
-		  	<a href="{% url 'app:course:update' course.slug %}" class="list-group-item">
+		  	<a href="{% url 'course:update' course.slug %}" class="list-group-item">
 		    	{% trans 'Edit Course' %}
 		  	</a>
 		  	<a href="#" class="list-group-item">
@@ -36,7 +36,7 @@
 			<a href="" class="list-group-item">
 		    	{% trans 'Duplicate Course' %}
 		  	</a>
-		  	<a href="{% url 'app:course:delete' course.slug %}" class="list-group-item">
+		  	<a href="{% url 'course:delete' course.slug %}" class="list-group-item">
 		    	{% trans 'Delete Course' %}
 		  	</a>
 		{% endif %}
