--- a/courses/templates/module/delete.html
+++ b/courses/templates/module/delete.html
@@ -5,26 +5,26 @@
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
 	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-	  	<li><a href="{% url 'app:course:view' course.slug %}">{{ course }}</a></li>
+	  	<li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
 	  	<li class="active">{% trans 'Manage Modules' %}</li>
 	</ol>
 {% endblock %}
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage' %}" class="list-group-item">
+	  	<a href="{% url 'course:manage' %}" class="list-group-item">
 	    	{% trans 'Courses' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create' %}" class="list-group-item">
+	  	<a href="{% url 'course:create' %}" class="list-group-item">
 	    	{% trans 'Create Course' %}
 	  	</a>
-	  	<a href="{% url 'app:course:view' course.slug %}" class="list-group-item active">
+	  	<a href="{% url 'course:view' course.slug %}" class="list-group-item active">
 	    	{% trans 'Course Info' %}
 	  	</a>
-	  	<a href="{% url 'app:course:update' course.slug %}" class="list-group-item">
+	  	<a href="{% url 'course:update' course.slug %}" class="list-group-item">
 	    	{% trans 'Edit Course' %}
 	  	</a>
-	  	<a href="{% url 'app:course:manage_mods' course.slug %}" class="list-group-item">
+	  	<a href="{% url 'course:manage_mods' course.slug %}" class="list-group-item">
 	    	{% trans 'Manage Modules' %}
 	  	</a>
 	  	<a href="" class="list-group-item">
@@ -48,6 +48,6 @@
 		{% csrf_token %}
 	    <p>{% trans 'Are you sure you want to delete the module' %} "{{ object }}"?</p>
 	    <input type="submit" class="btn btn-success btn-sm" value="{% trans 'Yes' %}" />
-	    <a href="{% url 'app:course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
+	    <a href="{% url 'course:manage' %}" class="btn btn-danger btn-sm">{% trans 'No' %}</a>
 	</form>
 {% endblock %}
