--- a/courses/templates/module/update.html
+++ b/courses/templates/module/update.html
@@ -6,26 +6,26 @@
 {% block breadcrumbs %}
 	<ol class="breadcrumb">
 	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-	  	<li><a href="{% url 'app:course:view' course.slug %}">{{ course }}</a></li>
+	  	<li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
 	  	<li class="active">{% trans 'Edit Module' %}</li>
 	</ol>
 {% endblock %}
 
 {% block sidebar %}
 	<div class="list-group">
-	  	<a href="{% url 'app:course:manage' %}" class="list-group-item">
+	  	<a href="{% url 'course:manage' %}" class="list-group-item">
 	    	{% trans 'Courses' %}
 	  	</a>
-	  	<a href="{% url 'app:course:create' %}" class="list-group-item">
+	  	<a href="{% url 'course:create' %}" class="list-group-item">
 	    	{% trans 'Create Course' %}
 	  	</a>
-	  	<a href="{% url 'app:course:view' course.slug %}" class="list-group-item active">
+	  	<a href="{% url 'course:view' course.slug %}" class="list-group-item active">
 	    	{% trans 'Course Info' %}
 	  	</a>
-	  	<a href="{% url 'app:course:update' course.slug %}" class="list-group-item">
+	  	<a href="{% url 'course:update' course.slug %}" class="list-group-item">
 	    	{% trans 'Edit Course' %}
 	  	</a>
-	  	<a href="{% url 'app:course:manage_mods' course.slug %}" class="list-group-item">
+	  	<a href="{% url 'course:manage_mods' course.slug %}" class="list-group-item">
 	    	{% trans 'Manage Modules' %}
 	  	</a>
 	  	<a href="" class="list-group-item">
@@ -51,7 +51,7 @@
 		</button>
 		<p>{% trans 'All fields are required' %}</p>
 	</div>
-		
+
 	<form method="post" action="" enctype="multipart/form-data">
 		{% csrf_token %}
 		{% for field in form %}
