--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -20,7 +20,7 @@
 
 {% block sidebar %}
 	<div class="btn-group-vertical">
-  		<a href="{% url 'app:users:create' %}" class="btn btn-raised">{% trans 'Add user' %}</a>
+  		<a href="{% url 'users:create' %}" class="btn btn-raised">{% trans 'Add user' %}</a>
   		<a href="javascript:void(0)" class="btn btn-raised">{% trans 'Send email' %}</a>
     </div>
 {% endblock %}
