--- a/app/templates/home_app.html
+++ b/app/templates/home_app.html
@@ -12,6 +12,7 @@
       	<div class="col-md-12">
             <ul class="breadcrumb" style="margin-bottom: 5px;">
           		<li><a href="{% url 'core:index' %}">{% trans 'Home' %}</a></li>
+	          	<li><a href="{% url 'core:logout' %}">{% trans 'Logout' %}</a></li>
             </ul>
       	</div>
     </div>
