--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -36,6 +36,12 @@
 		<div class="row ">
         <div class="col-lg-9 col-lg-offset-2">
             <div class="card">
+							{% if message %}
+							<div class="alert alert-danger">
+								{{message}}
+							</div>
+
+							{% endif %}
                 <div class="card-content">
 
                     <div class="card-body">
