--- a/app/templates/home_student.html
+++ b/app/templates/home_student.html
@@ -6,7 +6,7 @@
 	<div class="row">
       	<div class="col-md-12">
             <ul class="breadcrumb">
-          		<li><a href="{% url 'core:index' %}">{% trans 'Home' %} {{ logged }}</a></li>
+          		<li><a href="{% url 'core:home' %}">{% trans 'Home' %} {{ logged }}</a></li>
             </ul>
       	</div>
     </div>
