--- a/core/templates/remember_password.html
+++ b/core/templates/remember_password.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-
+{% load i18n %}
 {% block content %}
 
 	<div class="row logo-row">
@@ -15,22 +15,20 @@
 		        <div class="card-body">
 		        	<form class="form-group ">
 								<div class="form-group">
-		        			<label for="inputEmail" class="control-label label-static"> E-mail</label>
+		        			<label for="inputEmail" class="control-label label-static"> {% trans 'E-mail' %}</label>
 		        			<input type="email" class="form-control" id="inputEmail" placeholder="Email">
 		        		</div>
 								<div class="form-group">
-			        		<label for="inputRegistration" class=" control-label"> Registration </label>
+			        		<label for="inputRegistration" class=" control-label"> {% trans 'Registration' %} </label>
 			        		<input type="text" class="form-control" id="inputRegistration" placeholder="Registration">
 								</div>
 						<div class="col-lg-offset-4 col-lg-4">
-							<button class="btn btn-raised btn-primary btn-lg btn-block">Send</button>
+							<button class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Send' %}</button>
 
 						</div>
 
 		        	</form>
 		        </div>
-
-
 
 		    </div>
 
