--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -17,7 +17,7 @@
         <div class="col-lg-9 col-lg-offset-2">
             <div class="card">
 							{% if message %}
-							<div class="alert alert-danger">
+							<div class="alert alert-danger fade in">
 								{{message}}
 							</div>
 
