--- a/core/templates/remember_password.html
+++ b/core/templates/remember_password.html
@@ -10,20 +10,29 @@
 	<div class="row ">
 	<div class="col-lg-9 col-lg-offset-2">
 		<div class="card">
+			{% if success %}
+			<div class="alert alert-success fade in">
+				{{success}}
+			</div>
+			{% elif danger %}
+			<div class="alert alert-danger fade in">
+				{{danger}}
+			</div>
+			{% endif %}
 		    <div class="card-content">
-
 		        <div class="card-body">
-		        	<form class="form-group ">
+		        	<form class="form-group " method="post" action="">
+								{% csrf_token %}
 								<div class="form-group">
 		        			<label for="inputEmail" class="control-label label-static"> {% trans 'E-mail' %}</label>
-		        			<input type="email" class="form-control" id="inputEmail" placeholder="Email">
+		        			<input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email" {% if email %}value="{{email}}"{% endif %}>
 		        		</div>
 								<div class="form-group">
 			        		<label for="inputRegistration" class=" control-label"> {% trans 'Registration' %} </label>
-			        		<input type="text" class="form-control" id="inputRegistration" placeholder="Registration">
+			        		<input name="registration" type="text" class="form-control" id="inputRegistration" placeholder="Registration" {% if registration %}value="{{registration}}"{% endif %}>
 								</div>
 						<div class="col-lg-offset-4 col-lg-4">
-							<button class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Send' %}</button>
+							<button type="submite" class="btn btn-raised btn-primary btn-lg btn-block">{% trans 'Send' %}</button>
 
 						</div>
 
