Adding logo to user login and register templates #14

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,7 +9,7 @@
 {% block content %}
 	<div class="row logo-row">
         <div class="col-lg-offset-2 col-lg-9">
-            <img src="..." class="img-responsive center-block " alt="logo amadeus">
+            <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus" id="logo">
         </div>
     </div>
 
