--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -14,7 +14,7 @@
 		</div>
 	{% endif %}
 	<div class="row logo-row">
-        <div class="col-lg-offset-4 col-md-4">
+        <div class="col-lg-offset-2 col-lg-9">
             <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus" id="logo">
         </div>
     </div>
