--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -49,8 +49,11 @@
 								{% endif %}
 							</div>
 							{% endfor %}
-							<div class="col-md-offset-4">
+							<div class="col-md-offset-4 col-md-2 col-sm-2 col-xs-2">
 								<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
+							</div>
+							<div class="col-md-offset-3 col-md-2 col-sm-2 col-xs-2">
+								<a href="{% url 'core:home' %}" class="btn btn-sm btn-success" >{% trans 'Login' %}</a>	
 							</div>
 							
 						</form>
