Template e procedimento de criar topic issues #28 e #35

--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -12,6 +12,6 @@
     </div>
   </div>
   <div class="panel-body">
-    <p>{{topic.description}}</p>
+    <p>{{topic.description|linebreaks}}</p>
   </div>
 </div>
