--- a/courses/templates/subject/form_view_student.html
+++ b/courses/templates/subject/form_view_student.html
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class="panel-body">
-    <p>{{topic.description}}</p>
+    <p>{{topic.description|linebreaks}}</p>
   </div>
 </div>
