--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -37,6 +37,7 @@
 </head>
 <body>
 	{% block nav %}
+	<div class="container-fluid">
 		<div class="row">
         	<div class="navbar navbar-default">
             	<div class="container-fluid">
@@ -59,9 +60,10 @@
             	</div>
         	</div>
     	</div>
+    	</div>
 	{% endblock %}
 
-    <div class="container">
+    <div class="container-fluid">
     	{% block breadcrumbs %}
 
     	{% endblock %}
